@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <screen xmlns="http://www.scons.org/dbxsd/v1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.scons.org/dbxsd/v1.0 http://www.scons.org/dbxsd/v1.0/scons.xsd">% <userinput>scons -Q</userinput>
-cc -o f2.o -c f2.c
 cc -o f1.o -c f1.c
+cc -o f4.o -c f4.c
 cc -o f5.o -c f5.c
 cc -o f3.o -c f3.c
-cc -o f4.o -c f4.c
+cc -o f2.o -c f2.c
 cc -o prog f1.o f2.o f3.o f4.o f5.o
 </screen>
